--- a/Bayesian Decision Rule.ipynb
+++ b/Bayesian Decision Rule.ipynb
@@ -18,7 +18,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,12 +272,12 @@
     "### Hitung Probability tiap Kelas\n",
     "pada proses ini, hitung probability untuk kelas salmon dan seabass dengan persamaan \n",
     "\n",
-    "$ P(\\omega_{i}) = \\frac{N_{i}}{\\sum N_{j}} $"
+    "$\\large P(\\omega_{i}) = \\frac{N_{i}}{\\sum N_{j}} $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -307,16 +306,16 @@
     "### Hitung Posterior Conditional Probability\n",
     "selanjutnya hitung posterior conditional probability untuk kelas samlmon dan seabass dengan persamaan\n",
     "\n",
-    "$ P(\\omega_{i}|x) = P(x|\\omega_{i})P(\\omega_{i}) $\n",
+    "$\\large P(\\omega_{i}|x) = P(x|\\omega_{i})P(\\omega_{i}) $\n",
     "\n",
     "yang dimana\n",
     "\n",
-    "$ P(x|\\omega_{i}) = \\frac{count(x, \\omega_{i})}{N_{i}} $"
+    "$\\large P(x|\\omega_{i}) = \\frac{count(x, \\omega_{i})}{N_{i}} $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -361,9 +360,9 @@
     "\n",
     "$\n",
     "\\begin{equation*}\n",
-    "    f(P(Salmon|x), P(Seabass|x)) = \\begin{cases}\n",
-    "               Salmon               & P(Salmon|x) > P(Seabass|x)\\\\\n",
-    "               Seabass               & P(Salmon|x) \\leq P(Seabass|x)\\\\\n",
+    "    f(P(salmon|x), P(seabass|x)) = \\begin{cases}\n",
+    "               salmon               & P(salmon|x) > P(seabass|x)\\\\\n",
+    "               seabass               & P(salmon|x) \\leq P(seabass|x)\\\\\n",
     "           \\end{cases}\n",
     "\\end{equation*}\n",
     "$"
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +684,7 @@
        "19            0.038961             0.005848              0.017544  seabass  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,10 +716,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Conditional Risk\n",
-    "Selanjutnya mendefinisikan conditional risk, terdapat 2 action yaitu $\\alpha_{1}$ artinya pilih `salmon` dan $\\alpha_{2}$ pilih `seabass`. Untuk risk tablenya akan didefinisikan pada tabel dibawah\n",
+    "### Loss Table\n",
+    "Selanjutnya mendefinisikan loss table, terdapat 2 action yaitu $\\alpha_{1}$ artinya pilih `salmon` dan $\\alpha_{2}$ pilih `seabass`. Untuk risk tablenya akan didefinisikan pada tabel dibawah\n",
     "\n",
-    "|         | salmon   | seabass |\n",
+    "|   loss  | salmon   | seabass |\n",
     "|-------- |----------| ------- | \n",
     "| salmon  |    0     |    1    |\n",
     "| seabass |    1     |    0    |\n",
@@ -730,11 +729,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "risk_table = np.array([[0, 1], [1, 0]])"
+    "loss_table = np.array([[0, 1], [1, 0]])"
    ]
   },
   {
@@ -745,12 +744,12 @@
     "### Menghitung Threshold\n",
     "selanjutnya kita akan menghitung threshold yang nantinya akan digunakan untuk menentukan kelas dari dataset. Threshold dapat dihitung menggunakan persamaan\n",
     "\n",
-    "$threshold = \\frac{(\\lambda_{12} - \\lambda_{22})P(\\omega_{2})}{(\\lambda_{21} - \\lambda_{11})P(\\omega_{1})}$"
+    "$\\large threshold = \\frac{(\\lambda_{12} - \\lambda_{22})P(seabass)}{(\\lambda_{21} - \\lambda_{11})P(salmon)}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +762,7 @@
    ],
    "source": [
     "# hitung threshold\n",
-    "threshold = ((risk_table[0, 1] - risk_table[1, 1]) * p_seabass) / ((risk_table[1, 0] - risk_table[0, 0]) * p_salmon)\n",
+    "threshold = ((loss_table[0, 1] - loss_table[1, 1]) * p_seabass) / ((loss_table[1, 0] - loss_table[0, 0]) * p_salmon)\n",
     "\n",
     "print('Threshold:', threshold)"
    ]
@@ -776,12 +775,12 @@
     "### Menghitung Likelihood Ratio\n",
     "likelihood ratio adalah nilai yang nantinya akan dibandingkan dengan threshold. Likelihood ratio dapat dihitung dengan persamaan\n",
     "\n",
-    "$LR_{i} = \\frac{P(x_{i}|P(\\omega_{1}))}{P(x_{i}|P(\\omega_{2}))}$"
+    "$\\large LR_{i} = \\frac{P(x_{i}|salmon)}{P(x_{i}|seabass)}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1144,7 @@
        "19              0.017544         0.333333   0.819149  seabass  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
